examples/test/testpolicy10521.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10521
  namespace: namespace331
spec:
  podSelector:
    matchLabels:
      key35: value41
      key11: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value28
          key2: value35
          key24: value21
      podSelector:
        matchLabels:
          key21: value25
